--- a/app/presenters/templates/Homepage/default.latte
+++ b/app/presenters/templates/Homepage/default.latte
@@ -10,7 +10,7 @@
 
 {block content}
     <div class="container mt-5">
-        <h1>Contributte/Forms</h1>
+        <h1>YetAnotherBootstrapForm Demo</h1>
         <hr/>
 
         <div n:if="false" class="row justify-content-center">
