extending form macro set

--- a/app/presenters/templates/Homepage/default.latte
+++ b/app/presenters/templates/Homepage/default.latte
@@ -22,7 +22,7 @@
             <div class="col-12 col-lg-4">
                 <h3>Manualy rendered form { label } + { input }</h3>
                 {form manualForm}
-                    {label text /}
+                    {bsLabel text}
                     {input text}
                     <p>
                         {input submit}
